Fixes progress bar not fitting with special small screen rule

--- a/style/base.scss
+++ b/style/base.scss
@@ -2758,6 +2758,13 @@ input[type="range"]::-moz-range-thumb:active {
   }
 }
 
+@media screen and (max-width: 1256px) {
+  .egg-progress-bar {
+    position: relative;
+    right: 52px;
+    top: 4px;
+  }
+}
 @media screen and (max-width: 400px) {
   .heading-section-intro {
     font-family: Source Sans Pro;
